--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                   alt="person"
                 />
               </div>
+              <div class="media-icons"></div>
             </div>
           </div>
         </div>
