--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>SwiperJS Owl Carousel</title>
     <link rel="stylesheet" href="style.css" />
 
+    <!-- Link Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <!-- Link Swiper's CSS -->
     <link
       rel="stylesheet"
@@ -25,7 +34,26 @@
                   alt="person"
                 />
               </div>
-              <div class="media-icons"></div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <div class="name">Joe Dohn</div>
+                <div class="profession">Teacher</div>
+              </div>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="buttons">
+                <button class="about-me">About Me</button
+                ><button class="hire-me">Hire Me</button>
+              </div>
             </div>
           </div>
         </div>
