Swiper.js Snippet implemented

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   </head>
   <body>
     <section>
-      <div class="container">
-        <div class="content">
-          <div class="card">
+      <div class="swiper mySwiper container">
+        <div class="swiper-wrapper content">
+          <div class="swiper-slide card">
             <div class="card-content">
               <div class="image">
                 <img
@@ -56,8 +56,254 @@
               </div>
             </div>
           </div>
+          <div class="swiper-slide card">
+            <div class="card-content">
+              <div class="image">
+                <img src="http://source.unsplash.com/random/" alt="person" />
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <div class="name">Joe Dohn</div>
+                <div class="profession">Teacher</div>
+              </div>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="buttons">
+                <button class="about-me">About Me</button
+                ><button class="hire-me">Hire Me</button>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide card">
+            <div class="card-content">
+              <div class="image">
+                <img src="http://source.unsplash.com/random/" alt="person" />
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <div class="name">Joe Dohn</div>
+                <div class="profession">Teacher</div>
+              </div>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="buttons">
+                <button class="about-me">About Me</button
+                ><button class="hire-me">Hire Me</button>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide card">
+            <div class="card-content">
+              <div class="image">
+                <img src="http://source.unsplash.com/random/" alt="person" />
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <div class="name">Joe Dohn</div>
+                <div class="profession">Teacher</div>
+              </div>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="buttons">
+                <button class="about-me">About Me</button
+                ><button class="hire-me">Hire Me</button>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide card">
+            <div class="card-content">
+              <div class="image">
+                <img src="http://source.unsplash.com/random/" alt="person" />
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <div class="name">Joe Dohn</div>
+                <div class="profession">Teacher</div>
+              </div>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="buttons">
+                <button class="about-me">About Me</button
+                ><button class="hire-me">Hire Me</button>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide card">
+            <div class="card-content">
+              <div class="image">
+                <img src="http://source.unsplash.com/random/" alt="person" />
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <div class="name">Joe Dohn</div>
+                <div class="profession">Teacher</div>
+              </div>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="buttons">
+                <button class="about-me">About Me</button
+                ><button class="hire-me">Hire Me</button>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide card">
+            <div class="card-content">
+              <div class="image">
+                <img src="http://source.unsplash.com/random/" alt="person" />
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <div class="name">Joe Dohn</div>
+                <div class="profession">Teacher</div>
+              </div>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="buttons">
+                <button class="about-me">About Me</button
+                ><button class="hire-me">Hire Me</button>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide card">
+            <div class="card-content">
+              <div class="image">
+                <img src="http://source.unsplash.com/random/" alt="person" />
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <div class="name">Joe Dohn</div>
+                <div class="profession">Teacher</div>
+              </div>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="buttons">
+                <button class="about-me">About Me</button
+                ><button class="hire-me">Hire Me</button>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide card">
+            <div class="card-content">
+              <div class="image">
+                <img src="http://source.unsplash.com/random/" alt="person" />
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <div class="name">Joe Dohn</div>
+                <div class="profession">Teacher</div>
+              </div>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="buttons">
+                <button class="about-me">About Me</button
+                ><button class="hire-me">Hire Me</button>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide card">
+            <div class="card-content">
+              <div class="image">
+                <img src="http://source.unsplash.com/random/" alt="person" />
+              </div>
+              <div class="media-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-github"></i>
+              </div>
+              <div class="name-profession">
+                <div class="name">Joe Dohn</div>
+                <div class="profession">Teacher</div>
+              </div>
+              <div class="rating">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+              <div class="buttons">
+                <button class="about-me">About Me</button
+                ><button class="hire-me">Hire Me</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
     </section>
 
     <!-- Swiper JS -->
