Swiper.js Main Functionality done

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="swiper-slide card">
             <div class="card-content">
               <div class="image">
-                <img src="http://source.unsplash.com/random/" alt="person" />
+                <img src="http://source.unsplash.com/random/9" alt="person" />
               </div>
               <div class="media-icons">
                 <i class="fab fa-facebook"></i>
@@ -86,7 +86,7 @@
           <div class="swiper-slide card">
             <div class="card-content">
               <div class="image">
-                <img src="http://source.unsplash.com/random/" alt="person" />
+                <img src="http://source.unsplash.com/random/8" alt="person" />
               </div>
               <div class="media-icons">
                 <i class="fab fa-facebook"></i>
@@ -113,7 +113,7 @@
           <div class="swiper-slide card">
             <div class="card-content">
               <div class="image">
-                <img src="http://source.unsplash.com/random/" alt="person" />
+                <img src="http://source.unsplash.com/random/7" alt="person" />
               </div>
               <div class="media-icons">
                 <i class="fab fa-facebook"></i>
@@ -140,7 +140,7 @@
           <div class="swiper-slide card">
             <div class="card-content">
               <div class="image">
-                <img src="http://source.unsplash.com/random/" alt="person" />
+                <img src="http://source.unsplash.com/random/6" alt="person" />
               </div>
               <div class="media-icons">
                 <i class="fab fa-facebook"></i>
@@ -167,7 +167,7 @@
           <div class="swiper-slide card">
             <div class="card-content">
               <div class="image">
-                <img src="http://source.unsplash.com/random/" alt="person" />
+                <img src="http://source.unsplash.com/random/5" alt="person" />
               </div>
               <div class="media-icons">
                 <i class="fab fa-facebook"></i>
@@ -194,7 +194,7 @@
           <div class="swiper-slide card">
             <div class="card-content">
               <div class="image">
-                <img src="http://source.unsplash.com/random/" alt="person" />
+                <img src="http://source.unsplash.com/random/4" alt="person" />
               </div>
               <div class="media-icons">
                 <i class="fab fa-facebook"></i>
@@ -221,7 +221,7 @@
           <div class="swiper-slide card">
             <div class="card-content">
               <div class="image">
-                <img src="http://source.unsplash.com/random/" alt="person" />
+                <img src="http://source.unsplash.com/random/3" alt="person" />
               </div>
               <div class="media-icons">
                 <i class="fab fa-facebook"></i>
@@ -248,7 +248,7 @@
           <div class="swiper-slide card">
             <div class="card-content">
               <div class="image">
-                <img src="http://source.unsplash.com/random/" alt="person" />
+                <img src="http://source.unsplash.com/random/2" alt="person" />
               </div>
               <div class="media-icons">
                 <i class="fab fa-facebook"></i>
@@ -275,7 +275,7 @@
           <div class="swiper-slide card">
             <div class="card-content">
               <div class="image">
-                <img src="http://source.unsplash.com/random/" alt="person" />
+                <img src="http://source.unsplash.com/random/1" alt="person" />
               </div>
               <div class="media-icons">
                 <i class="fab fa-facebook"></i>
